@@ -34,6 +34,7 @@ EXPORTS
 	winx_exit_thread@0
 	winx_enable_privilege@4
 	winx_get_drive_type@4
+	winx_get_volume_information@4
 	winx_get_volume_size@12
 	winx_get_filesystem_name@12
 	winx_fopen@8
